local notebook edits

--- a/notebooks/radnlp_demo.ipynb
+++ b/notebooks/radnlp_demo.ipynb
@@ -359,6 +359,43 @@
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[0;32m/Users/brian/anaconda/envs/uuds4health/lib/python3.5/site-packages/pyConTextNLP/pyConTextGraph.py\u001b[0m(518)\u001b[0;36mcleanText\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m    516 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m    517 \u001b[0;31m        \u001b[0;31m# clean up white spaces\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m--> 518 \u001b[0;31m        \u001b[0mtxt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtxt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m    519 \u001b[0;31m        \u001b[0;32mif\u001b[0m \u001b[0mstripNumbers\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m    520 \u001b[0;31m            \u001b[0mtxt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtxt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "ipdb> p txt\n",
+      "Sentence(\"1.\")\n",
+      "ipdb> p r2.sub(\" \".txt)\n",
+      "*** AttributeError: 'str' object has no attribute 'txt'\n",
+      "ipdb> p r2.sub(\" \", txt)\n",
+      "*** TypeError: expected string or bytes-like object\n",
+      "ipdb> p type(r2)\n",
+      "<class '_sre.SRE_Pattern'>\n",
+      "ipdb> p type(txt)\n",
+      "<class 'textblob.blob.Sentence'>\n",
+      "ipdb> p txt.raw\n",
+      "'1.'\n"
+     ]
+    }
+   ],
+   "source": [
+    "%debug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "codingKey = {1:\"AMBIVALENT\",\n",
